data/all_generated_tests/raw_wast_tests/br_table_ImproperFunctionCallorReturnHandling_2376.wast
;; 6. **Test Description: Infinite Loop Prevention in Function Call:**    - Create a potential infinite loop where a `br_table` instruction branches into a call to the same function.    - **Constraint Checked:** Ensures that the loop detection mechanism prevents unintended infinite loops.    - **Relation to Function Call Loops:** Checks boundaries for recursive calls inadvertently formed through `br_table`.

(assert_invalid
  (module
    (func $infinite-loop-prevention
      (loop $l1 (result i32)
        (block $b1 (result i32)
          (br_table $b1 $l1 (i32.const 0))
        )
      )
      (i32.eqz) (drop)
    )
  )
  "infinite loop"
)